modules/vpc/route-tables.tf
resource "aws_route_table" "public" {
  # If false, set count to 0 and skip creation
  count = var.public_route_table_required == true ? 1 : 0

  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }
  tags = {
    Name = "${var.vpc_name}-public-route-table"
  }
}

resource "aws_route_table_association" "public" {
  for_each = toset(var.vpc_subnet_azs)

  subnet_id      = aws_subnet.public[each.key].id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  # If false, set count to 0 and skip creation
  count = var.private_route_table_required == true ? 1 : 0

  vpc_id = aws_vpc.this.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.this.id
  }

  tags = {
    Name = "${var.vpc_name}-private-route-table"
  }
}

resource "aws_route_table_association" "private" {
  for_each = toset(var.vpc_subnet_azs)

  subnet_id      = aws_subnet.private[each.key].id
  route_table_id = aws_route_table.private.id
}
